--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
+    "expo-barcode-scanner": "~11.2.0",
     "expo-checkbox": "~2.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-paper": "^4.12.1",
     "react-native-responsive-screen": "^1.4.2",
