--- a/package.json
+++ b/package.json
@@ -10,25 +10,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.5",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
+    "apollo": "^2.34.0",
     "expo": "~44.0.0",
     "expo-barcode-scanner": "~11.2.0",
     "expo-checkbox": "~2.0.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "graphql": "^16.5.0",
+    "graphql-tag": "^2.12.6",
+    "native-base": "2",
     "react": "17.0.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "^2.4.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-paper": "^4.12.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
