--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
     "apollo": "^2.34.0",
+    "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-barcode-scanner": "~11.2.0",
     "expo-checkbox": "~2.0.0",
