--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-barcode-scanner": "~11.2.0",
+    "expo-camera": "~12.1.2",
     "expo-checkbox": "~2.0.0",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "^13.1.1",
+    "expo-media-library": "~14.0.0",
+    "expo-permissions": "^13.2.0",
+    "expo-print": "~11.1.0",
+    "expo-sharing": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "graphql-tag": "^2.12.6",
     "native-base": "2",
@@ -39,7 +46,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
