--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "expo-camera": "~12.1.2",
     "expo-checkbox": "~2.0.0",
     "expo-font": "~10.0.4",
+    "expo-image-multiple-picker": "^4.4.0",
     "expo-image-picker": "~12.0.1",
+    "expo-image-picker-multiple": "^1.4.1",
     "expo-media-library": "~14.0.0",
     "expo-permissions": "~13.1.0",
     "expo-print": "~11.1.0",
