--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-barcode-scanner": "~11.2.0",
     "expo-camera": "~12.1.2",
     "expo-checkbox": "~2.0.0",
+    "expo-file-system": "~13.1.4",
     "expo-font": "~10.0.4",
     "expo-image-multiple-picker": "^4.4.0",
     "expo-image-picker": "~12.0.1",
